--- a/index.html
+++ b/index.html
@@ -4,27 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="root">
-      <h2>Not rendering</h2>
+      <h1>Not rendering</h1>
     </div>
   </body>
-  <script
-    crossorigin
-    src="https://unpkg.com/react@18/umd/react.development.js"
-  ></script>
-  <script
-    crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-  ></script>
-
-  <script>
-    const heading = React.createElement("h1",{},"React running");
-    const root = ReactDOM.createRoot(document.getElementById('root'))
-    root.render(heading);
-    // heading.innerHTML = "Name : Vishnu P V";
-    // const root = document.getElementById("root");
-    // root.appendChild(heading);
-  </script>
+  <script src="app.js"></script>
 </html>
