Expexting key error (deleted parcel-cache and built again)

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
       <h1>Not rendering</h1>
     </div>
   </body>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </html>
